Update index.html meta keywords

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     
     <meta itemprop="name" content="LaughterSeriously.com">
     <meta itemprop="description" content="At Laughter Seriously, our instruction specializes in personalized Laughter Yoga and Yoga Nidra sessions and classes, guiding you through the rejuvenating practices of intentional laughter and deep meditative relaxation.">
+    <meta name="keywords" content="Laughter Seriously, Laughter Yoga, Yoga Nidra, intentional laughter, meditative relaxation, stress relief, holistic rejuvenation, relaxation practices">
     <meta name="author" content="Ritu Ahuja">
     <meta name="language" content="English">
     <meta charset="UTF-8">
