--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Laughter Seriously</title>
     
     <meta itemprop="name" content="LaughterSeriously.com">
+    <meta name="description" content="At Laughter Seriously, our instruction specializes in personalized Laughter Yoga and Yoga Nidra sessions and classes, guiding you through the rejuvenating practices of intentional laughter and deep meditative relaxation.">
     <meta itemprop="description" content="At Laughter Seriously, our instruction specializes in personalized Laughter Yoga and Yoga Nidra sessions and classes, guiding you through the rejuvenating practices of intentional laughter and deep meditative relaxation.">
     <meta name="keywords" content="Laughter Seriously, Laughter Yoga, Yoga Nidra, intentional laughter, meditative relaxation, stress relief, holistic rejuvenation, relaxation practices">
     <meta name="author" content="Ritu Ahuja">
