--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div style="background-color: yellow; text-align: center; padding: 1em;">🚧 Under construction 🚧 Coming soon 🚧</div>
 
       <section id="home">        
-        <h1 style="text-align: center;">Laughter, Seriously</h1>
+        <h1 style="text-align: center; color: darkgreen">Laughter, Seriously</h1>
         <p>
           Discover the transformative power of joy and relaxation at Laughter Seriously! <a href="#about">Our instruction</a> specializes in personalized <a href="#laughterYoga">Laughter Yoga</a> and <a href="#yogaNidra">Yoga Nidra</a> sessions and classes, guiding you through the rejuvenating practices of intentional laughter and deep meditative relaxation. Whether you're seeking to alleviate stress, find clarity, or simply introduce more joy into your life, our certified director and expert instructors are here to support you every step of the way. Schedule your session today and embark on a journey towards a more radiant, relaxed, and joyful you.
         </p>
