enable screenshot in preview card

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Preview card: -->
     <meta property="og:title" content="LaughterSeriously.com">
-    <!-- needs screenshot: <meta property="og:image" content="screenshot.png" /> -->
+    <meta property="og:image" content="screenshot.png" />
     <meta property="og:description" content="At Laughter Seriously, our instruction specializes in personalized Laughter Yoga and Yoga Nidra sessions and classes, guiding you through the rejuvenating practices of intentional laughter and deep meditative relaxation.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.laughterseriously.com/">
