canonical url w/o www

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icon.png">
-    <meta itemprop="url" content="https://www.laughterseriously.com/">
-    <link rel="canonical" href="https://www.laughterseriously.com/" />
+    <meta itemprop="url" content="https://laughterseriously.com/">
+    <link rel="canonical" href="https://laughterseriously.com/" />
 
     <!-- Preview card: -->
     <meta property="og:title" content="LaughterSeriously.com">
     <meta property="og:image" content="screenshot.png" />
     <meta property="og:description" content="At Laughter Seriously, our instruction specializes in personalized Laughter Yoga and Yoga Nidra sessions and classes, guiding you through the rejuvenating practices of intentional laughter and deep meditative relaxation.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.laughterseriously.com/">
+    <meta property="og:url" content="https://laughterseriously.com/">
     <meta property="og:site_name" content="Laughter Seriously" />
     <meta property="og:locale" content="en_US" />
     
