--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <ul>
           <li>Pandi-Perumal, <i>et al.</i> (2022) <a href="" target="_blank">"The origin and clinical relevance of yoga nidra"</a> in <i>Sleep and vigilance</i> <b>6</b>(1):61-84. DOI: 10.1007/s41782-022-00202-7</li>
             <blockquote><i>"Clinical studies have shown that yoga nidra meditation is associated with positive physiological changes, including improvements in several hematological variables, red blood cell counts, blood glucose levels, and hormonal status.... The practice has also been shown to reduce psychometrically measured indices of mild depression and anxiety...."</i></blockquote>
-         <li>S. Musto and A. Hazard Vallerand (2023) <a href="https://sigmapubs.onlinelibrary.wiley.com/doi/10.1111/jnu.12927" target="_blank">"Exploring the uses of yoga nidra: An integrative review" in <i>Journal of Nursing Scholarship</i> <b>55</b>(25 July):1-15. DOI: 10.1111/jnu.12927</li>
-           <blockquote><i>"Yoga nidra was found to be effective in most ... studies.... Yoga nidra has the potential to be a useful, noninvasive, nonpharmacologic treatment or adjunct for a variety of conditions, particularly mental health."</i></blockquote>
+         <li>S. Musto and A. Hazard Vallerand (2023) <a href="https://sigmapubs.onlinelibrary.wiley.com/doi/10.1111/jnu.12927" target="_blank">"Exploring the uses of yoga nidra: An integrative review"</a> in <i>Journal of Nursing Scholarship</i> <b>55</b>(25 July):1-15. DOI: 10.1111/jnu.12927</li>
+           <blockquote><i>"Yoga nidra was found to be effective in most of these studies.... Yoga nidra has the potential to be a useful, noninvasive, nonpharmacologic treatment or adjunct for a variety of conditions, particularly mental health."</i></blockquote>
         </ul>
       </section>
       
