--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       
       <section id="contact">
         <h2>Contact</h2>
-        <h3>Call or text <a href="tel:408-242-0652">408-242-0652</a>, email <a href="mailto:info@laughterseriously.com" target="_blank">info@laughterseriously.com</a>, or send us a message:</h3>
+        <h3>Call or text <a href="tel:408-242-0652">408-242-0652</a>, email <a href="mailto:info@laughterseriously.com" target="_blank">info@laughterseriously.com</a>, or send a message:</h3>
         <div style="width: 75%; margin: 0 auto;">
           <form action="https://formspree.io/f/xoqorrko" method="POST">
             <input type="text" name="name" placeholder="Name" autocomplete="name" style="width: 85%; font-size: 13pt; box-sizing: border-box; margin-bottom: 10px;">
