--- a/index.html
+++ b/index.html
@@ -145,10 +145,14 @@
         <iframe src="https://www.youtube.com/embed/0eB3ISAYE-I" style="width: 80%; margin:auto; display: block;" height="300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h3>Peer-reviewed medical evidence literature reviews:</h3>
         <ul>
-          <li>C.K. Kramer and C.B. Leitao (2023) <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0286260" target="_blank">"Laughter as medicine: A systematic review and meta-analysis of interventional studies evaluating the impact of spontaneous laughter on cortisol levels"</a> in <i>PLoS ONE</i> <b>18</b>(5):e0286260. DOI: 10.1371/journal.pone.0286260</li>
-            <blockquote>"<i>Conclusions: Current evidence demonstrates that spontaneous laughter is associated with greater reduction in cortisol levels as compared with usual activities, suggesting laughter as a potential adjunctive medical therapy to improve well-being.... The health benefits of self-induced or simulated laughter have been reported previously with the most common modality consisting of a combination of yoga breathing techniques with induced laughter exercises, the laughter yoga.</i>"</blockquote>
-          <li>N.K. Alici and A.A. Dönmez (2020) <a href="https://www.sciencedirect.com/science/article/abs/pii/S1744388120311270" target="_blank">"A systematic review of the effect of laughter yoga on physical function and psychosocial outcomes in older adults"</a> in <i>Complementary Therapies in Clinical Practice</i> <b>41</b>:101252. DOI: 10.1016/j.ctcp.2020.101252</li>
+          <li>
+            N.K. Alici and A.A. Dönmez (2020) <a href="https://www.sciencedirect.com/science/article/abs/pii/S1744388120311270" target="_blank">"A systematic review of the effect of laughter yoga on physical function and psychosocial outcomes in older adults"</a> in <i>Complementary Therapies in Clinical Practice</i> <b>41</b>:101252. DOI: 10.1016/j.ctcp.2020.101252
             <blockquote>"<i>Significant differences were found in the effectiveness of laughter yoga on physical function (blood pressure, cortisol level, sleep quality) and psychosocial health (life satisfaction, quality of life, loneliness, death anxiety, depression, mood, happiness) in older adults. Conclusion: Laughter yoga is cost-effective and has no adverse effect in older adults. It can be used for health promotion....</i>"</blockquote>
+          </li>
+          <li>
+            C.K. Kramer and C.B. Leitao (2023) <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0286260" target="_blank">"Laughter as medicine: A systematic review and meta-analysis of interventional studies evaluating the impact of spontaneous laughter on cortisol levels"</a> in <i>PLoS ONE</i> <b>18</b>(5):e0286260. DOI: 10.1371/journal.pone.0286260
+            <blockquote>"<i>Current evidence demonstrates that spontaneous laughter is associated with greater reduction in cortisol levels as compared with usual activities, suggesting laughter as a potential adjunctive medical therapy to improve well-being.... The health benefits of self-induced or simulated laughter have been reported previously with the most common modality consisting of a combination of yoga breathing techniques with induced laughter exercises, the laughter yoga.</i>"</blockquote>
+          </li>
         </ul>
       </section>
 
