--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           Discover the transformative power of joy and relaxation at Laughter Seriously! <a href="#about">Our instruction</a> specializes in personalized <a href="#laughterYoga">Laughter Yoga</a> and <a href="#yogaNidra">Yoga Nidra</a> sessions and classes, guiding you through the rejuvenating practices of intentional laughter and deep meditative relaxation. Whether you're seeking to alleviate stress, find clarity, or simply introduce more joy into your life, our certified director and expert instructors are here to support you every step of the way. Schedule your session today and embark on a journey towards a more radiant, relaxed, and joyful you.
         </p>
         <img src="https://www.applyto.jobs/ls.png" align="right" alt="" width="1" height="1" />
-        <a href="https://www.meetup.com/laughter-seriously/" target="_blank" style="text-decoration: none;"><button style="font-size: 14pt; display: block; margin: 20px auto; background-color: green; color: white; cursor: pointer;">Join our South Bay Meetup group</button></a>
+        <a href="https://www.meetup.com/laughter-seriously/?action=join" target="_blank" style="text-decoration: none;"><button style="font-size: 14pt; display: block; margin: 20px auto; background-color: green; color: white; cursor: pointer;">Join our South Bay Meetup group</button></a>
       </section>
 
       <section id="laughterYoga">
@@ -206,14 +206,14 @@
         </div>
         <br />
         <hr />
-        <a href="https://www.meetup.com/laughter-seriously/" target="_blank"><button style="font-size: 14pt; display: block; margin: 20px auto; background-color: green; color: white; cursor: pointer;">Join our South Bay Meetup group</button></a>
+        <a href="https://www.meetup.com/laughter-seriously/?action=join" target="_blank"><button style="font-size: 14pt; display: block; margin: 20px auto; background-color: green; color: white; cursor: pointer;">Join our South Bay Meetup group</button></a>
         <br />
         <small>
           Copyright © 2023 Laughter Seriously LLC. All rights reserved.
           <!-- EIN 93-4136446, California entity 202359412437. -->
           <br />
 
-          Last modified November 1, 2023.
+          Last modified November 2, 2023.
 
         </small>
       </section>
